<resources>
    <string name="app_name">Weather App</string>
    <string name="input">Input Word</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="input_error_title">Error</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="wrong_word">Wrong word</string>
    <string name="word_added">Word added</string>
    <string name="badInput">Bad Input</string>
    <string name="wordNotFound">Word Not Found</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="add_word">Add word</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings for general uses -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <!-- Strings used for fragments for HomePage -->
    <string name="home_page_header">My planned trips</string>
    <string name="new_trip_button">Create a new trip</string>

    <!-- Strings used for fragments for NewTrip -->
    <string name="new_trip_activity_name">Create a new trip</string>
    <string name="trip_name">Trip name</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="trip_name_error">Trip name is required</string>
    <string name="trip_added">Trip added successfully</string>

    <!-- Strings used for fragments for EditTrip -->
    <string name="trip_updated">Trip updated successfully</string>

    <!-- Strings used for fragments for NewDestination -->
    <string name="new_destination_activity_name">Create a new destination</string>
    <string name="new_destination_header">New destination</string>
    <string name="destination_label">Destination</string>
    <string name="destination_placeholder">Enter destination </string>
    <string name="destination_error">Destination is required</string>
    <string name="destination_create_success">New destination added successfully!!</string>

    <string name="arrival_date_label">Arrival date</string>
    <string name="departure_date_label">Departure date</string>
    <string name="date_error">Invalid date</string>
    <string name="error">Error</string>

    <string name="please_enter_destination">Please enter a destination</string>
    <string name="incorrect_dates">Incorrect dates, please note that only dates up to five days ahead can be entered</string>

    <string name="geocoding_failed">Geocoding failed or no results found</string>
    <string name="error_fetching_geocoding_data">Error fetching geocoding data</string>

    <!-- Strings used for fragments for NewDestination -->
    <string name="edit_destination_header">Edit Destination</string>
    <string name="destination_edit_success">Destination updated successfully!!</string>
    <!-- English strings -->
    <string name="confirm_delete">Delete Destination</string>
    <string name="confirm_delete_message">Are you sure you want to delete this destination?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="destination_deleted">Destination successfully deleted.</string>


    <!-- Strings used for fragments for TripPage -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_trip_title">Delete Trip</string>
    <string name="delete_trip_confirmation">Are you sure you want to delete this trip? This action cannot be undone</string>
    <string name="trip_deleted">Trip deleted successfully</string>


    <!-- Strings used for fragments for TripItem -->
    <plurals name="number_of_destinations">
        <item quantity="one">%d destination</item>
        <item quantity="other">%d destinations</item>
    </plurals>


</resources>