<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!-- AppBarLayout -->

  <!-- Main content -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/main_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- TextInput for trip name -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_name_input_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/trip_name_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_trip_name"
          android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Cancel Button -->

    <!-- Save Button -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
