<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">


    <LinearLayout
        android:layout_width="282dp"
        android:layout_height="558dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="85dp">

        <EditText
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:id="@+id/word"
            android:layout_width="136dp"
            android:layout_height="54dp"
            android:hint="@string/word"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/meaning"
            android:layout_marginLeft="20dp"
            android:layout_width="136dp"
            android:layout_height="54dp"
            android:hint="@string/meaning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <Button
                android:layout_marginLeft="20dp"
                android:id="@+id/addWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:text="@string/add_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.826"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="onClick"
                android:id="@+id/buttonBack"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>